<?xml version="1.0"?>
<package format="3">
  <name>hello_world_clang_format</name>
  <version>0.0.1</version>
  <description>Minimal ROS 2 publisher with ament_clang_format integration.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
  </export>
</package>
